--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="mb-8 leading-relaxed">Website ini khusus untuk Back-Office staff. Dashboard ini berguna untuk memanipulasi asset seperti meng-edit, meng-upload, dan meng-update website yang dibuat oleh admin website di MGI Corp.</p>
             <p></p>
             <div class="flex justify-center">
-              <button class="font-semibold ml-4 inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg"><a href="./login-page.html">Log In</a></button>
+              <button class="font-semibold ml-4 inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg"><a href="./page-sub-domain/login-page.html">Log In</a></button>
             </div>
           </div>
         </div>
