--- a/page-sub-domain/login-page.html
+++ b/page-sub-domain/login-page.html
@@ -16,7 +16,7 @@
             <div
               class="shrink-1 mb-12 grow-0 basis-auto md:mb-0 md:w-9/12 md:shrink-0 lg:w-6/12 xl:w-6/12">
               <img
-                src="./img/PLATINUM LOGOS.png"
+                src="../img/PLATINUM LOGOS.png"
                 class="w-full"
                 alt="Sample image" />
             </div>
