--- a/page-sub-domain/pengaturan.html
+++ b/page-sub-domain/pengaturan.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css"  rel="stylesheet" />
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="./src/file-input.css">
+	<link rel="stylesheet" href="../src/file-input.css">
 </head>
 <body style="background-color: #f8f8f8;">
 
@@ -25,7 +25,7 @@
             
             <div class="h-full px-3 py-4 overflow-y-auto" style="background-color: black;">
                 <a href="https://flowbite.com/" class="flex items-center justify-center pl-2.5 mb-5">
-                    <img src="./img/PLATINUM LOGOS.png" class="h-6 mr-3 sm:h-7" alt="Flowbite Logo" />
+                    <img src="../img/PLATINUM LOGOS.png" class="h-6 mr-3 sm:h-7" alt="Flowbite Logo" />
                  </a>
                  <a href="https://flowbite.com/" class="flex items-center justify-center pl-2.5 mb-5">
                     <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Back Office</span>
