--- a/page-sub-domain/edit-data-pengguna.html
+++ b/page-sub-domain/edit-data-pengguna.html
@@ -170,7 +170,7 @@
                 </ul>
                 <ul class="pt-4 mt-4 space-y-2 font-light border-t border-gray-200 dark:border-gray-700">
                     <li>
-                       <a href="#" class="flex items-center p-2 text-white rounded-lg dark:text-white hover:bg-white dark:hover:bg-gray-700 group">
+                       <a href="./pengaturan.html" class="flex items-center p-2 text-white rounded-lg dark:text-white hover:bg-white dark:hover:bg-gray-700 group">
                         <svg class="w-5 h-5 text-black transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M18 7.5h-.423l-.452-1.09.3-.3a1.5 1.5 0 0 0 0-2.121L16.01 2.575a1.5 1.5 0 0 0-2.121 0l-.3.3-1.089-.452V2A1.5 1.5 0 0 0 11 .5H9A1.5 1.5 0 0 0 7.5 2v.423l-1.09.452-.3-.3a1.5 1.5 0 0 0-2.121 0L2.576 3.99a1.5 1.5 0 0 0 0 2.121l.3.3L2.423 7.5H2A1.5 1.5 0 0 0 .5 9v2A1.5 1.5 0 0 0 2 12.5h.423l.452 1.09-.3.3a1.5 1.5 0 0 0 0 2.121l1.415 1.413a1.5 1.5 0 0 0 2.121 0l.3-.3 1.09.452V18A1.5 1.5 0 0 0 9 19.5h2a1.5 1.5 0 0 0 1.5-1.5v-.423l1.09-.452.3.3a1.5 1.5 0 0 0 2.121 0l1.415-1.414a1.5 1.5 0 0 0 0-2.121l-.3-.3.452-1.09H18a1.5 1.5 0 0 0 1.5-1.5V9A1.5 1.5 0 0 0 18 7.5Zm-8 6a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Z"/>
                           </svg>
@@ -178,7 +178,7 @@
                        </a>
                     </li>
                     <li>
-                        <a href="#" class="flex items-center p-2 text-white rounded-lg dark:text-white hover:bg-white dark:hover:bg-gray-700 group">
+                        <a href="../index.html" class="flex items-center p-2 text-white rounded-lg dark:text-white hover:bg-white dark:hover:bg-gray-700 group">
                             <svg class="w-5 h-5 text-black transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h11m0 0-4-4m4 4-4 4m-5 3H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h3"/>
                               </svg>
